--- a/package.json
+++ b/package.json
@@ -1,30 +1,16 @@
 {
-  "name": "plastify",
+  "name": "plastify-server",
   "version": "0.1.0",
-  "private": true,
+  "scripts": {
+    "client": "cd client && npm start",
+    "server": "nodemon server.js",
+    "dev":
+      "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
+  },
   "dependencies": {
-    "husky": "^0.14.3",
-    "lint-staged": "^6.1.1",
-    "prettier": "^1.10.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.7",
-    "redux": "^3.7.2"
+    "express": "^4.16.2"
   },
   "devDependencies": {
-    "react-scripts": "1.1.1"
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,json,css}": [
-      "prettier --single-quote --write",
-      "git add"
-    ]
-  },
-  "scripts": {
-    "precommit": "lint-staged",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "concurrently": "^3.5.0"
   }
 }
