--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "connect-ensure-login": "^0.1.1",
     "express": "^4.16.2",
     "express-session": "^1.15.6",
+    "husky": "^0.14.3",
     "jsonwebtoken": "^8.1.1",
+    "lint-staged": "^7.0.0",
     "mongoose": "^5.0.7",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "prettier": "^1.11.1"
   },
   "devDependencies": {
     "concurrently": "^3.5.0"
