--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "proxy": "http://localhost:5000/",
   "dependencies": {
     "bootstrap": "^4.0.0",
+    "dotenv": "^5.0.1",
+    "giphy-js-sdk-core": "^1.0.3",
     "husky": "^0.14.3",
     "lint-staged": "^6.1.1",
     "prettier": "^1.10.2",
