--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,16 @@
     "dotenv": "^5.0.1",
     "giphy-js-sdk-core": "^1.0.3",
     "husky": "^0.14.3",
+    "jquery": "^3.3.1",
     "lint-staged": "^6.1.1",
     "prettier": "^1.10.2",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.3.0",
+    "react-dom": "^16.3.0",
     "react-redux": "^5.0.7",
     "reactstrap": "^5.0.0-beta.3",
     "redux": "^3.7.2",
-    "redux-promise": "^0.5.3"
+    "redux-promise": "^0.5.3",
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
     "react-scripts": "1.1.1"
